# OLM-Package-Repo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test-bundle.yml
common_code/: common_functions.py  create_overlay.py
rabbitmq-olm-package-repo/: generate-cluster-operator-olm-package.py  generate-messaging-topology-operator-olm-package.py
rabbitmq_olm_package_repo/: __init__.py  cluster_operator_bundle.py  generate_cluster_operator_olm_package.py  generate_messaging_topology_operator_olm_package.py  main.py  topology_operator_bundle.py  utils.py
testfiles/: catalogsource-openshift.yaml  catalogsource2-openshift.yaml  catalogsource3-openshift.yaml  install-rabbitmq-cluster-operator.sh  install-rabbitmq-messaging-topology-operator.sh  og.yaml  rabbitmq-cluster-operator-catalog-template.yaml  rabbitmq-cluster-operator-catalog.yaml  rabbitmq-messaging-operator-catalog-template.yaml  rabbitmq-messaging-operator-catalog.yaml  rabbitmq-messaging-operator-subscription-template.yaml  rabbitmq-messaging-operator-subscription.yaml  rabbitmq-operator-subscription-template.yaml  rabbitmq-operator-subscription.yaml  sub_devopstales-catalog-messaging-operator-openshift.yaml  sub_devopstales-catalog-openshift.yaml  sub_devopstales-catalog-single-active-consumer-operator-openshift.yaml  sub_devopstales-catalog2-openshift.yaml  sub_devopstales-catalog3-openshift.yaml  uninstall-rabbitmq-cluster-operator.sh  uninstall-rabbitmq-messaging-topology-operator.sh
tests/: test_cluster_operator_bundle.py  test_topology_operator_bundle.py  utils.py
(+142 files in other folders)
