[tool.poetry]
name = "rabbitmq_olm_package_repo"
version = "0.1.0"
description = "A script to generate OLM bundle starting from operator manifest files"
authors = ["RabbitMQ Platform team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_bundle = "rabbitmq_olm_package_repo:main"
